--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "html-to-image": "^1.11.13",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
     "next": "15.3.4",
@@ -59,7 +60,7 @@
   },
   "devDependencies": {
     "@dyad-sh/nextjs-webpack-component-tagger": "^0.8.0",
-    "@types/node": "^20",
+    "@types/node": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
