[dyad] Rebuilding the dashboard and application features - wrote 21 file(s), deleted 1 file(s) + extra files edited outside of Dyad

--- a/package.json
+++ b/package.json
@@ -38,17 +38,26 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
+    "@tiptap/extension-bubble-menu": "^2.5.4",
+    "@tiptap/extension-character-count": "^2.5.4",
+    "@tiptap/react": "^2.5.4",
+    "@tiptap/starter-kit": "^2.5.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^11.3.12",
+    "html-docx-js": "^0.3.1",
     "html-to-image": "^1.11.13",
     "input-otp": "^1.4.2",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-confetti": "^6.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
@@ -62,6 +71,7 @@
   },
   "devDependencies": {
     "@dyad-sh/nextjs-webpack-component-tagger": "^0.8.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "^19",
