--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "framer-motion": "^11.3.12",
     "html-docx-js": "^0.3.1",
     "html-to-image": "^1.11.13",
+    "idb": "^8.0.3",
     "input-otp": "^1.4.2",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.511.0",
