--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
-    "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-alert-dialog": "^1.1.14",
-    "@radix-ui/react-aspect-ratio": "^1.1.7",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-context-menu": "^2.2.15",
+    "@hookform/resolvers": "latest",
+    "@radix-ui/react-accordion": "latest",
+    "@radix-ui/react-alert-dialog": "latest",
+    "@radix-ui/react-aspect-ratio": "latest",
+    "@radix-ui/react-avatar": "latest",
+    "@radix-ui/react-checkbox": "latest",
+    "@radix-ui/react-collapsible": "latest",
+    "@radix-ui/react-context-menu": "latest",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-hover-card": "^1.1.14",
@@ -38,8 +38,24 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
+    "@tiptap/core": "^3.4.4",
+    "@tiptap/extension-bold": "^3.4.4",
     "@tiptap/extension-bubble-menu": "^2.5.4",
+    "@tiptap/extension-bullet-list": "^3.4.4",
     "@tiptap/extension-character-count": "^2.5.4",
+    "@tiptap/extension-document": "^3.4.4",
+    "@tiptap/extension-dropcursor": "^3.4.4",
+    "@tiptap/extension-gapcursor": "^3.4.4",
+    "@tiptap/extension-hard-break": "^3.4.4",
+    "@tiptap/extension-heading": "^3.4.4",
+    "@tiptap/extension-history": "^3.4.4",
+    "@tiptap/extension-horizontal-rule": "^3.4.4",
+    "@tiptap/extension-italic": "^3.4.4",
+    "@tiptap/extension-list-item": "^3.4.4",
+    "@tiptap/extension-ordered-list": "^3.4.4",
+    "@tiptap/extension-paragraph": "^3.4.4",
+    "@tiptap/extension-strike": "^3.4.4",
+    "@tiptap/extension-text": "^3.4.4",
     "@tiptap/react": "^2.5.4",
     "@tiptap/starter-kit": "^2.5.4",
     "class-variance-authority": "^0.7.1",
@@ -71,13 +87,13 @@
     "zod": "^3.25.28"
   },
   "devDependencies": {
-    "@dyad-sh/nextjs-webpack-component-tagger": "^0.8.0",
-    "@types/file-saver": "^2.0.7",
+    "@dyad-sh/nextjs-webpack-component-tagger": "latest",
+    "@types/file-saver": "latest",
     "@types/node": "latest",
     "@types/react": "latest",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/react-dom": "latest",
+    "postcss": "latest",
+    "tailwindcss": "latest",
+    "typescript": "latest"
   }
 }
