--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tiptap/core": "^3.4.4",
     "@tiptap/extension-bold": "^3.4.4",
     "@tiptap/extension-bubble-menu": "^2.5.4",
