--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "idb": "^8.0.3",
     "input-otp": "^1.4.2",
     "jspdf": "^2.5.1",
+    "jstat": "^1.9.6",
     "lucide-react": "^0.511.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
