[dyad] wrote 1 file(s) + extra files edited outside of Dyad

--- a/package.json
+++ b/package.json
@@ -103,6 +103,11 @@
   "pnpm": {
     "overrides": {
       "react-remove-scroll": "2.7.1"
-    }
+    },
+    "ignoredBuiltDependencies": [
+      "@sentry/cli",
+      "core-js",
+      "sharp"
+    ]
   }
 }
