[dyad] wrote 2 file(s) + extra files edited outside of Dyad

--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "postcss": "latest",
+    "supabase": "^2.40.7",
     "tailwindcss": "latest",
     "typescript": "latest"
   },
