feat: Implement linting, fix errors, and add new features. Resolved all linting and TypeScript errors, configured ESLint, added type declarations, excluded Supabase Deno functions from TSCheck, and updated .gitignore. Also includes new Document Analyzer and Reference Manager features.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ next-env.d.ts
 
 # Sentry Config File
 .env.sentry-build-plugin
+
+# Checkpoints
+/.checkpoints/
+
+# Supabase temp files
+/supabase/.temp/
