--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@tiptap/extension-text": "^3.4.4",
     "@tiptap/react": "^2.5.4",
     "@tiptap/starter-kit": "^2.5.4",
+    "bibtex-parser": "^0.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -96,6 +97,8 @@
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "^15.5.4",
     "postcss": "latest",
     "supabase": "^2.40.7",
     "tailwindcss": "latest",
