feat: Add automated thesis feedback and improvement suggestions

--- a/package.json
+++ b/package.json
@@ -48,33 +48,33 @@
   },
   "dependencies": {
     "@heyputer/puter.js": "2.1.6",
-    "@hookform/resolvers": "latest",
-    "@radix-ui/react-accordion": "latest",
-    "@radix-ui/react-alert-dialog": "latest",
-    "@radix-ui/react-aspect-ratio": "latest",
-    "@radix-ui/react-avatar": "latest",
-    "@radix-ui/react-checkbox": "latest",
-    "@radix-ui/react-collapsible": "latest",
-    "@radix-ui/react-context-menu": "latest",
-    "@radix-ui/react-dialog": "latest",
-    "@radix-ui/react-dropdown-menu": "latest",
-    "@radix-ui/react-hover-card": "latest",
-    "@radix-ui/react-label": "latest",
-    "@radix-ui/react-menubar": "latest",
-    "@radix-ui/react-navigation-menu": "latest",
-    "@radix-ui/react-popover": "latest",
-    "@radix-ui/react-progress": "latest",
-    "@radix-ui/react-radio-group": "latest",
-    "@radix-ui/react-scroll-area": "latest",
-    "@radix-ui/react-select": "latest",
-    "@radix-ui/react-separator": "latest",
-    "@radix-ui/react-slider": "latest",
-    "@radix-ui/react-slot": "latest",
-    "@radix-ui/react-switch": "latest",
-    "@radix-ui/react-tabs": "latest",
-    "@radix-ui/react-toggle": "latest",
-    "@radix-ui/react-toggle-group": "latest",
-    "@radix-ui/react-tooltip": "latest",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@revenuecat/purchases-js": "^1.20.1",
     "@sentry/nextjs": "^10.12.0",
     "@supabase/ssr": "^0.7.0",
@@ -114,10 +114,11 @@
     "html-to-image": "^1.11.13",
     "idb": "^8.0.3",
     "input-otp": "^1.4.2",
+    "js-yaml": "^4.1.1",
     "jspdf": "^2.5.1",
     "jstat": "^1.9.6",
     "lucide-react": "^0.511.0",
-    "next": "^16.0.0",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^5.4.394",
     "pptxgenjs": "^4.0.1",
@@ -150,11 +151,11 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/file-saver": "latest",
-    "@types/node": "latest",
+    "@types/file-saver": "^2.0.7",
+    "@types/node": "^24.10.1",
     "@types/pdfjs-dist": "^2.10.378",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
@@ -168,10 +169,10 @@
     "eslint-plugin-unused-imports": "^4.3.0",
     "globals": "^16.5.0",
     "jsdom": "^27.2.0",
-    "postcss": "latest",
+    "postcss": "^8.5.6",
     "supabase": "^2.40.7",
     "tailwindcss": "3.4.0",
-    "typescript": "latest",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.4",
     "vitest": "^4.0.9"
   },
@@ -181,8 +182,7 @@
     },
     "ignoredBuiltDependencies": [
       "@sentry/cli",
-      "core-js",
-      "sharp"
+      "core-js"
     ]
   }
 }
