--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "html-to-image": "^1.11.13",
     "idb": "^8.0.3",
     "input-otp": "^1.4.2",
+    "jose": "^6.1.3",
     "js-yaml": "^4.1.1",
     "jspdf": "^2.5.1",
     "jstat": "^1.9.6",
